some backup editing just in case of disk crashing

--- a/xmrstak/backend/pint/CMakeLists.txt
+++ b/xmrstak/backend/pint/CMakeLists.txt
@@ -3,9 +3,14 @@ set(CMAKE_BUILD_TYPE Debug)
 PROJECT(test_native)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build)
-set(APPLICATION_SOURCES test_functions.c pint_native.c)
+set(APPLICATION_SOURCES test_functions.cpp pint_native.cpp)
+if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
+    set(CMAKE_CXX_FLAGS "-fpermissive -std=gnu++11 -Wl,-z,noexecstack ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_C_FLAGS "-fpermissive -Wl,-z,noexecstack ${CMAKE_C_FLAGS}")
+endif()
 
 INCLUDE_DIRECTORIES("/usr/include/pint")
+INCLUDE_DIRECTORIES(BEFORE "/home/swang/src/xmr-stak/")
 
 link_directories(/usr/local/lib/pint)
 #link_directories(${CMAKE_HOME_DIRECTORY}/src/pintdrv/build/)
